--- a/css/style.css
+++ b/css/style.css
@@ -478,7 +478,7 @@ body {
   left: 30px;
   width: 200px;
   height: 50px;
-  background-image: url("../img/black.png");
+  background-image: url("../../img/black.png");
   background-size: contain;
   background-repeat: no-repeat;
   z-index: 999;
@@ -580,7 +580,6 @@ body {
   .nav .overlay {
     overflow-y: auto;
   }
-
   .nav .overlay a {
     font-size: 20px;
   }
@@ -670,7 +669,6 @@ body {
     filter: blur(12px);
     opacity: 0;
   }
-
   100% {
     filter: blur(0px);
     opacity: 1;
@@ -748,7 +746,7 @@ body {
 
 @media (min-width: 700px) and (orientation: landscape) {
   .home-text {
-    margin: 0rem 20rem 0 3rem;
+    margin: -2rem 20rem 0 3rem;
   }
 }
 
@@ -813,7 +811,7 @@ body {
 
 @media (min-width: 700px) and (orientation: portrait) {
   .home-text p {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     line-height: 2rem;
   }
 }
@@ -846,7 +844,7 @@ body {
   position: absolute;
   width: 220px;
   height: 280px;
-  background-image: url("../img/zdjecie-removebg-preview.png");
+  background-image: url("../../img/zdjecie-removebg-preview.png");
   background-size: cover;
   right: 0;
   bottom: 0;
@@ -947,7 +945,6 @@ body {
   0% {
     opacity: 1;
   }
-
   100% {
     opacity: 0;
     transform: translateY(46px);
@@ -1052,7 +1049,6 @@ body {
     transform: rotate(-45deg);
     opacity: 0;
   }
-
   100% {
     transform: rotate(0);
     opacity: 1;
@@ -1082,47 +1078,47 @@ body {
 }
 
 .projects .portfolio .imgP1 {
-  background: url("../img/1.jpg");
+  background: url("../../img/1.jpg");
   background-size: cover;
 }
 
 .projects .portfolio .imgP2 {
-  background: url("../img/2.jpg");
+  background: url("../../img/2.jpg");
   background-size: cover;
 }
 
 .projects .portfolio .imgP3 {
-  background: url("../img/3.jpg");
+  background: url("../../img/3.jpg");
   background-size: cover;
 }
 
 .projects .portfolio .imgP4 {
-  background: url("../img/4.jpg");
+  background: url("../../img/4.jpg");
   background-size: cover;
 }
 
 .projects .portfolio .imgP5 {
-  background: url("../img/5.jpg");
+  background: url("../../img/5.jpg");
   background-size: cover;
 }
 
 .projects .portfolio .imgP6 {
-  background: url("../img/6.jpg");
+  background: url("../../img/6.jpg");
   background-size: cover;
 }
 
 .projects .portfolio .imgP7 {
-  background: url("../img/7.jpg");
+  background: url("../../img/7.jpg");
   background-size: cover;
 }
 
 .projects .portfolio .imgP8 {
-  background: url("../img/8.jpg");
+  background: url("../../img/8.jpg");
   background-size: cover;
 }
 
 .projects .portfolio .imgP9 {
-  background: url("../img/9.jpg");
+  background: url("../../img/9.jpg");
   background-size: cover;
 }
 
@@ -1158,7 +1154,7 @@ body {
   font-weight: 700;
   justify-content: center;
   align-items: center;
-  font-size: 0.9rem;
+  font-size: 0.75rem;
 }
 
 @media (min-width: 700px) and (orientation: portrait) {
@@ -1726,7 +1722,6 @@ body {
   0% {
     transform: translateZ(180px) rotateY(0deg);
   }
-
   100% {
     transform: translateZ(-180px) rotateY(80deg);
   }
@@ -1872,7 +1867,7 @@ body {
 
 @media (min-width: 700px) and (orientation: landscape) {
   .about .inspired {
-    font-size: 1.3rem;
+    font-size: 1rem;
   }
 }
 
@@ -1912,6 +1907,7 @@ body {
 
 @media (min-width: 600px) and (orientation: landscape) {
   .contact {
+    height: 110vh;
     margin: 0 3rem;
     display: flex;
     flex-direction: row;
@@ -1921,21 +1917,21 @@ body {
 @media (min-width: 700px) and (orientation: landscape) {
   .contact {
     margin: 0 5rem;
-    height: 95vh;
+    height: 100vh;
   }
 }
 
 @media (min-width: 1024px) and (orientation: landscape) {
   .contact {
     margin: 0 5rem;
-    height: 80vh;
+    height: 85vh;
   }
 }
 
 @media (min-width: 1280px) and (orientation: landscape) {
   .contact {
     margin: 0 8rem;
-    height: 80vh;
+    height: 85vh;
   }
 }
 
@@ -2269,12 +2265,10 @@ body {
 }
 
 @keyframes animate {
-
   0%,
   100% {
     transform: translateZ(-100px);
   }
-
   50% {
     transform: translateZ(100px);
   }
@@ -2418,7 +2412,7 @@ body {
   left: 30px;
   width: 150px;
   height: 50px;
-  background-image: url("../img/white.png");
+  background-image: url("../../img/white.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -2474,31 +2468,24 @@ body {
   0% {
     transform: rotate(-45deg) scale(1);
   }
-
   10% {
     transform: rotate(-45deg) scale(1.1);
   }
-
   20% {
     transform: rotate(-45deg) scale(0.9);
   }
-
   30% {
     transform: rotate(-45deg) scale(1.2);
   }
-
   40% {
     transform: rotate(-45deg) scale(0.9);
   }
-
   50% {
     transform: rotate(-45deg) scale(1.05);
   }
-
   60% {
     transform: rotate(-45deg) scale(0.95);
   }
-
   70% {
     transform: rotate(-45deg) scale(1);
   }
@@ -2543,5 +2530,4 @@ body {
     font-size: 0.7rem;
   }
 }
-
 /*# sourceMappingURL=style.css.map */
