--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -15,7 +15,7 @@
     left: 30px;
     width: 150px;
     height: 50px;
-    background-image: url("../../img/white.png");
+    background-image: url("../img/white.png");
     background-size: contain;
     background-repeat: no-repeat;
     @media (min-width: $breakpoint-l) and (orientation: landscape) {
