--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -130,7 +130,7 @@
     position: absolute;
     width: 220px;
     height: 280px;
-    background-image: url("../../img/zdjecie-removebg-preview.png");
+    background-image: url("../img/zdjecie-removebg-preview.png");
     background-size: cover;
     right: 0;
     bottom: 0;
