--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -86,39 +86,39 @@
       }
     }
     .imgP1 {
-      background: url("../../img/1.jpg");
+      background: url("../img/1.jpg");
       background-size: cover;
     }
     .imgP2 {
-      background: url("../../img/2.jpg");
+      background: url("../img/2.jpg");
       background-size: cover;
     }
     .imgP3 {
-      background: url("../../img/3.jpg");
+      background: url("../img/3.jpg");
       background-size: cover;
     }
     .imgP4 {
-      background: url("../../img/4.jpg");
+      background: url("../img/4.jpg");
       background-size: cover;
     }
     .imgP5 {
-      background: url("../../img/5.jpg");
+      background: url("../img/5.jpg");
       background-size: cover;
     }
     .imgP6 {
-      background: url("../../img/6.jpg");
+      background: url("../img/6.jpg");
       background-size: cover;
     }
     .imgP7 {
-      background: url("../../img/7.jpg");
+      background: url("../img/7.jpg");
       background-size: cover;
     }
     .imgP8 {
-      background: url("../../img/8.jpg");
+      background: url("../img/8.jpg");
       background-size: cover;
     }
     .imgP9 {
-      background: url("../../img/9.jpg");
+      background: url("../img/9.jpg");
       background-size: cover;
     }
 
