--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -8,7 +8,7 @@
     left: 30px;
     width: 200px;
     height: 50px;
-    background-image: url("../../img/black.png");
+    background-image: url("../img/black.png");
     background-size: contain;
     background-repeat: no-repeat;
     z-index: 999;
