add new project

--- a/css/style.css
+++ b/css/style.css
@@ -848,7 +848,7 @@ body {
   background-size: cover;
   right: 0;
   bottom: 0;
-  filter: grayscale(100%);
+  filter: grayscale(80%);
 }
 
 @media (min-width: 400px) and (orientation: portrait) {
@@ -1119,6 +1119,11 @@ body {
 
 .projects .portfolio .imgP9 {
   background: url("../img/9.jpg");
+  background-size: cover;
+}
+
+.projects .portfolio .imgP10 {
+  background: url("../img/10.jpg");
   background-size: cover;
 }
 
