--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -121,6 +121,10 @@
       background: url("../img/9.jpg");
       background-size: cover;
     }
+    .imgP10 {
+      background: url("../img/10.jpg");
+      background-size: cover;
+    }
 
     .theCard {
       position: absolute;
