--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -125,6 +125,14 @@
       background: url("../img/10.jpg");
       background-size: cover;
     }
+    .imgP11 {
+      background: url("../img/11.jpg");
+      background-size: cover;
+    }
+    .imgP12 {
+      background: url("../img/12.jpg");
+      background-size: cover;
+    }
 
     .theCard {
       position: absolute;
